--- a/fx-app-react/src/App.module.css
+++ b/fx-app-react/src/App.module.css
@@ -1,4 +1,4 @@
-.fx-app {
+.fx_app {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,27 +7,13 @@
   margin: 0 auto;
 }
 
-.fx-ui-wrapper {
+.fx_ui_wrapper {
   display: flex;
   flex-direction: column;
   padding: 16px;
   border-radius: 4px;
   background-color: white;
   box-shadow: 8px 8px #01101d;
-}
-
-.fx-currency-conversion-form {
-  justify-content: center;
-}
-
-.fx-quote {
-  padding: 16px 0;
-  font-size: 2em;
-  text-align: center;
-}
-
-.fx-quote-amount {
-  font-weight: bold;
 }
 
 .fx-annotation {
